Regression: Blender don't have icon on taskbar (WIN32) #112729
Labels
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset System
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Code Documentation
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Viewport & EEVEE
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Asset Browser Project
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Module
Viewport & EEVEE
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Severity
High
Severity
Low
Severity
Normal
Severity
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
8 Participants
Notifications
Due Date
No due date set.
Dependencies
No dependencies set.
Reference: blender/blender#112729
Loading…
Reference in New Issue
Block a user
No description provided.
Delete Branch "%!s()"
Deleting a branch is permanent. Although the deleted branch may continue to exist for a short time before it actually gets removed, it CANNOT be undone in most cases. Continue?
System Information
Operating system: Windows-10-10.0.19045-SP0 64 Bits
Graphics card: NVIDIA GeForce MX230/PCIe/SSE2 NVIDIA Corporation 4.6.0 NVIDIA 531.79
Blender Version
Broken: version: 4.0.0 Alpha, branch: main, commit date: 2023-09-22 10:13, hash:
80943094745b
Short description of error
Exact steps for others to reproduce the error
This is a set of instructions to reproduce the issue:
C:\blender1
c:\blender2
%appdata%\Microsoft\internet Explorer\quick Launch\User Pinned\ImplicitAppShortcuts\
and check all randomly named folders in there for any shortcuts to blender, if they exist remove them (do NOT skip this step, it's crucial to reproduce the issue) mine was in a1fd9ca90ea8fbea4
sub folder, but i have to admit, unsure if this changes between systems/users.C:\blender1
%appdata%\Microsoft\internet Explorer\quick Launch\User Pinned\ImplicitAppShortcuts\
and validate there is now a shortcut toC:\blender1\blender-launcher.exe
namedblender 4.0
in there somewherec:\blender1\blender-laucher.exe
explorer.exe
but do not close the task manager yet you're gonna need it for the next step (This step is important since explorer.exe will cache icons)file->run new task
and startexplorer.exe
again (if you accidentally closed the task manager, ctrl-shift-esc to re-open it)Now for the wacky stuff.
%appdata%\Microsoft\internet Explorer\quick Launch\User Pinned\ImplicitAppShortcuts\
and validate there is still somehow a shortcut toC:\blender1\blender-launcher.exe
namedblender 4.0
in there somewhere but it no longer actually shows on the taskbar.Now for the truly wacky stuff:
c:\blender2
%appdata%\Microsoft\internet Explorer\quick Launch\User Pinned\ImplicitAppShortcuts\
and validate there is still somehow a shortcut toC:\blender1\blender-launcher.exe
namedblender 4.0
in there somewhere rather thanc:\blender2
To restore order:
%appdata%\Microsoft\internet Explorer\quick Launch\User Pinned\ImplicitAppShortcuts\
c:\blender2
The root cause appears to be the shortcut in
%appdata%\Microsoft\internet Explorer\quick Launch\User Pinned\ImplicitAppShortcuts\
keeps pointing to the wrong executable even after pinning a different blender instance, and i'm not entirely sure why it is doing that.Can't confirm.
Thanks for the report, @sanek122005.
To better understand the problem, could you please provide some additional information?
Possible causes of this issue could be a problem with the installation process or a conflict with other software on your system.
the problem is observed only in 4.0 alpha. 3.6 works fine. 3.6 was installed using installer. using a shortcut file doesn't help
Can try reinstall Blender? Uninstall the current version of Blender and then download and install the latest stable release from the official Blender website. This may resolve any installation-related issues.
It has happened to me several times, I think there is something that makes Blender register its quick access, it can happen when a new build is downloaded and the old build folder is deleted, the issue will shows.
To solve it, in the
taskbar right click the Blender icon
, thenright click Blender in the popup menu
that appears and selectproperties
Here in Properties Click the
Open File Location
and a popup will appear saying that thefile does not exist
, in this popup a button should appear todelete the missing shortcut
.after some manipulations with the registration of the blender and rebooting the system, everything fell into place
I remember @LazyDodo once worked on Blender's file shortcuts (which had conflicts on different installations).
Maybe it's related?
I'm still not sure if it's a bug in Blender. Feel free to comment on any findings.
Can confirm today
Blender don`t has icon on taskbarto Regression: Blender don`t has icon on taskbarNot entirely sure what's going on here, and do not have a whole lot of time available, but i have a somewhat difficult to execute repro for this
C:\blender1
c:\blender2
%appdata%\Microsoft\internet Explorer\quick Launch\User Pinned\ImplicitAppShortcuts\
and check all randomly named folders in there for any shortcuts to blender, if they exist remove them (do NOT skip this step, it's crucial to reproduce the issue) mine was in a1fd9ca90ea8fbea4
sub folder, but i have to admit, unsure if this changes between systems/users.C:\blender1
%appdata%\Microsoft\internet Explorer\quick Launch\User Pinned\ImplicitAppShortcuts\
and validate there is now a shortcut toC:\blender1\blender-launcher.exe
namedblender 4.0
in there somewherec:\blender1\blender-laucher.exe
explorer.exe
but do not close the task manager yet you're gonna need it for the next step (This step is important since explorer.exe will cache icons)file->run new task
and startexplorer.exe
again (if you accidentally closed the task manager, ctrl-shift-esc to re-open it)Now for the wacky stuff.
%appdata%\Microsoft\internet Explorer\quick Launch\User Pinned\ImplicitAppShortcuts\
and validate there is still somehow a shortcut toC:\blender1\blender-launcher.exe
namedblender 4.0
in there somewhere but it no longer actually shows on the taskbar.Now for the truly wacky stuff:
c:\blender2
%appdata%\Microsoft\internet Explorer\quick Launch\User Pinned\ImplicitAppShortcuts\
and validate there is still somehow a shortcut toC:\blender1\blender-launcher.exe
namedblender 4.0
in there somewhere rather thanc:\blender2
To restore order:
%appdata%\Microsoft\internet Explorer\quick Launch\User Pinned\ImplicitAppShortcuts\
c:\blender2
The root cause appears to be the shortcut in
%appdata%\Microsoft\internet Explorer\quick Launch\User Pinned\ImplicitAppShortcuts\
keeps pointing to the wrong executable even after pinning a different blender instance, and i'm not entirely sure why it is doing that.@guishe no, not even close, this is unrelated to the file/thumbnail registration though the register button, this will happen even if you never touched that button in your life.
It's related to the properties we set in the window property store in
registerWindowAppUserModelProperties
not being updated if the shortcut already exists, there's some folks on stackexchange that have noticed the same problem.Finding and updating an .lnk file in a random folder, sounds fragile, we may have to hash the path to the executable and append it to the APPID to make this work reliably.
I edited the description to contain the steps mentioned by @LazyDodo.
It seems a bit too much since it was mentioned that the problem occurs when uninstalling the previous version of Blender.
But follow the submission form better.
I have a fix, just need to find some time to put it though testing
I'm running short on available time, if someone else wants to work on this here's my test code to update the registration
feel free to run with it and turn it into a pull request
things left todo:
winstuff.c
is still C, it will need to transition to .cc (this will need to be a separate pull) an alternate option would be to stick this function in a new .cc file on its own and call it fromBLI_windows_register_blend_extension
insidewinstuff.c
BLENDER_WIN_APPID
Regression: Blender don`t has icon on taskbarto Regression: Blender don`t has icon on taskbar (WIN32)Regression: Blender don`t has icon on taskbar (WIN32)to Regression: Blender don't have icon on taskbar (WIN32)Got similar problem on Blender 4.0.1 (just downloaded it from Steam). What helped me is to remove "Blender 4.0" from
%appdata%\Microsoft\internet Explorer\quick Launch\User Pinned\ImplicitAppShortcuts\
.Not sure why this issue is closed, because it's clearly not fixed. It's even still there in 4.1.1.
I tried @Andrej730 's solution to remove the blender item from the ImplicitAppShortcuts folder, but that only changed the icon from one non-blender icon to another non-blender icon (now the item is looking like a notepad icon)
Using blender 4.1.1, windows pro
before:
after clearing the folder:
Did you register the user?
Yes I already did that and just tried it again (Although I am struggling to understand why that should even make a difference, because it's not about the blend file here, but about the launcher). Doesn't make any difference.
If you still think it's bugged, you may submit a new bug report about this issue to see if it can be fixed/improved or not.
It's still the same thing and it's not fixed. So I think this thread is good enough for it. Somebody of the team just needs to re-open it and not close it when not fixed.
It will not. that's why I am suggesting to you to open a new ticket if you still think it's bugged.